pkg/cmd/kurel/testdata/httproute-backend-request-timeout/expected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: slowapi
    launcher.gokure.dev/component: slowapi
  name: slowapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slowapi
  strategy: {}
  template:
    metadata:
      labels:
        app: slowapi
        launcher.gokure.dev/component: slowapi
    spec:
      containers:
      - image: myorg/slowapi:v1.0.0
        name: slowapi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: slowapi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slowapi
    launcher.gokure.dev/component: slowapi
  name: slowapi
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: slowapi
  type: ClusterIP
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app: slowapi
    launcher.gokure.dev/component: slowapi
  name: slowapi
  namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: slowapi
    launcher.gokure.dev/component: slowapi
  name: slowapi-httproute
  namespace: default
spec:
  hostnames:
  - slow.example.com
  parentRefs:
  - name: public-gateway
  rules:
  - backendRefs:
    - name: slowapi
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 10s
      request: 30s
